--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: grey;
+  color:wheat;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
