--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,3 +1,13 @@
-.form{
-  border: 1px solid black;
+.form {
+  display: flex;
+  margin: 0 auto;
+  flex-flow: column;
+  width: 300px;
+}
+.btn {
+  /* display: block; */
+}
+.form input {
+  padding: 10px;
+  margin-bottom: 10px;
 }
